# mechanism_UED

./: .gitignore  DiCode复现_接入点评估.md  STAGE1_运行流程.md  STAGE3_实验设计.md  STAGE4_phase2_实验设计优化方向.md  STAGE4_phase2_方法优化_brainstorm.md  STAGE4_实验设计.md  STAGE4_提速方案.md  STAGE4_阶段1_任务分配.md  STAGE4_阶段2_任务分配.md  UED实验步骤指导.md  UED开放问题与领域现状_deep_research_2026-06-30.md  future_routes.md  idea可行性分析.md  new_direction.md  prompt设计稿_v2.md  proof_check_sympy.py  proof_skeleton_entropy_regularized_heterogeneous_UED.md  sigma_measure.py  v1_experiment.md  任务运行时间分析.md  方案B_多generator设计.md  方法设计_v1.md  方法设计_v2.md
dicode_src/: .dockerignore  .env.example  .gitignore  AUCTION_INTEGRATION.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
dicode_src/apptainer/: container.def
dicode_src/auction/: __init__.py  ambition.py  contest.py  coverage.py  craftax_achievements.py  endorsement.py  learnability.py  mock_proposals.py  pricing.py  proposal.py  selectors.py
dicode_src/auction/tests/: test_bid_terms.py  test_contest.py  test_coverage.py  test_evolve_auction_dataflow.py  test_integration.py  test_learnability.py  test_persona_prompts.py  test_pricing.py  test_proposal.py  test_selectors.py  test_walrasian.py
dicode_src/conf/: config.yaml
dicode_src/conf/dicode_manager/: default.yaml
dicode_src/conf/evaluation/: default.yaml
dicode_src/conf/gen_manager/: auction_a.yaml  auction_c.yaml  default.yaml
dicode_src/conf/training/: default.yaml
dicode_src/conf/validation/: default.yaml
dicode_src/conf/visualize/: default.yaml
dicode_src/experiments/training/: run_dicode.py
dicode_src/src/dicode/: __init__.py  craftax_evaluation.py  evolution.py  evolution_efficient.py  logging_utils.py  network.py  ppo_tr.py  runtime_analysis.py  scoring.py  selection.py  setup.py  task_utils.py  training.py  wrappers.py  wrappers_cl.py
dicode_src/src/minicraftax/: craftax_state.py  game_mechanics.py  (+1 more)
(+159 files in other folders)
