[project]
name = "dicode"
version = "0.1.0"
description = "A Sandbox for Open-Ended Reinforcement Learning Research Based on Craftax"
authors = [
    { name="Konstantinos Mitsides", email="konstantinos.mitsides23@imperial.ac.uk" },
    { name="Maxence Faldor", email="m.faldor22@imperial.ac.uk" },
    { name="Antoine Cully", email="a.cully@imperial.ac.uk" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "orbax-checkpoint",
    "chex",
    "distrax",
    "craftax",
    "hydra-core",
    "omegaconf",
    "wandb",
    "openai",
    "networkx",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pyvis",
    "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
evaluation = [
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/konstantinosmitsides/DiCode"
Repository = "https://github.com/konstantinosmitsides/DiCode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dicode", "src/minicraftax", "auction"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]  # Basic flake8 + isort

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
